==> fanyuzhao0213/rtt_f405RGT6/rt-thread/bsp/stm32/stm32f405RGT6_FYZ/applications/oled.c <==
#include"oled.h"
#define OLED_I2C_BUS_NAME          "i2c2"  /* 传感器连接的I2C总线设备名称 */

void OLED_Init(struct rt_i2c_bus_device *bus)
{
    rt_thread_mdelay(300);
    write_reg(bus,Command_ADDR,0xAE);
    write_reg(bus,Command_ADDR,0x40);
    write_reg(bus,Command_ADDR,0xB0);
    write_reg(bus,Command_ADDR,0xC8);
    write_reg(bus,Command_ADDR,0x81);
    write_reg(bus,Command_ADDR,0xff);
    write_reg(bus,Command_ADDR,0xa1);
    write_reg(bus,Command_ADDR,0xa6);
    write_reg(bus,Command_ADDR,0xa8);
    write_reg(bus,Command_ADDR,0x1f);
    write_reg(bus,Command_ADDR,0xd3);
    write_reg(bus,Command_ADDR,0x00);
    write_reg(bus,Command_ADDR,0xd5);
    write_reg(bus,Command_ADDR,0xf0);
    write_reg(bus,Command_ADDR,0xd9);
    write_reg(bus,Command_ADDR,0x22);
    write_reg(bus,Command_ADDR,0xda);
    write_reg(bus,Command_ADDR,0x02);
    write_reg(bus,Command_ADDR,0xdb);
    write_reg(bus,Command_ADDR,0x49);
    write_reg(bus,Command_ADDR,0x8d);
    write_reg(bus,Command_ADDR,0x14);
    write_reg(bus,Command_ADDR,0xaf);
    OLED_Clear(bus);
}

void OLED_Clear(struct rt_i2c_bus_device *bus)
{

    rt_uint8_t i,n;
    for(i=0;i<8;i++)
    {
        write_reg(bus,Command_ADDR,0xb0+i);
        write_reg(bus,Command_ADDR,0x00);
        write_reg(bus,Command_ADDR,0x10);
        for(n=0;n<128;n++) write_reg(bus,Data_ADDR,0);
    }
}

void OLED_Set_Pos(struct rt_i2c_bus_device *bus,rt_uint8_t x,rt_uint8_t y)
{
    write_reg(bus,Command_ADDR,0xb0+y);
    write_reg(bus,Command_ADDR,((x&0xf0)>>4)|0x10);
    write_reg(bus,Command_ADDR,(x&0x0f));
}

void OLED_Display_On(struct rt_i2c_bus_device *bus)
{
    write_reg(bus,Command_ADDR,0x8D);
    write_reg(bus,Command_ADDR,0x14);
    write_reg(bus,Command_ADDR,0xAF);
}

void OLED_Display_Off(struct rt_i2c_bus_device *bus)
{
    write_reg(bus,Command_ADDR,0x8D);
    write_reg(bus,Command_ADDR,0x10);
    write_reg(bus,Command_ADDR,0xAE);
}

void OLED_ShowChar(struct rt_i2c_bus_device *bus,rt_uint8_t x,rt_uint8_t y,rt_uint8_t chr,rt_uint8_t Char_Size)
{
    rt_uint8_t c=0,i=0;
    c=chr-' ';
    if(x>Max_Column-1){x=0;y=y+2;}
    if(Char_Size ==16)
    {
        OLED_Set_Pos(bus,x,y);
        for(i=0;i<8;i++)
            write_reg(bus,Data_ADDR,F8X16[c*16+i]);
        OLED_Set_Pos(bus,x,y+1);
        for(i=0;i<8;i++)
            write_reg(bus,Data_ADDR,F8X16[c*16+i+8]);
    }
    else {
        OLED_Set_Pos(bus,x,y);
        for(i=0;i<6;i++)
            write_reg(bus,Data_ADDR,F6x8[c][i]);
    }
}

void OLED_ShowString(struct rt_i2c_bus_device *bus,rt_uint8_t x,rt_uint8_t y,rt_uint8_t *chr,rt_uint8_t Char_Size)
{
    rt_uint8_t j=0;
    while (chr[j]!='\0')
    {       OLED_ShowChar(bus,x,y,chr[j],Char_Size);
            x+=8;
        if(x>120){x=0;y+=2;}
            j++;
    }
}

void OLED_ShowCHinese(struct rt_i2c_bus_device *bus,rt_uint8_t x,rt_uint8_t y,rt_uint8_t no)
{
    rt_uint8_t t,adder=0;
    OLED_Set_Pos(bus,x,y);
    for(t=0;t<16;t++)
     {
            write_reg(bus,Data_ADDR,Hzk[2*no][t]);
            adder+=1;
     }
        OLED_Set_Pos(bus,x,y+1);
    for(t=0;t<16;t++)
    {
        write_reg(bus,Data_ADDR,Hzk[2*no+1][t]);
        adder+=1;
    }
}
