==> ZhaoGuangX/CQ_Band/nRF5_SDK_12.1.0_0d23e2a/examples/bsp/OLED/oled.c <==
#include "oled.h"
#include "stdlib.h"
#include "oledfont.h"
#include <stdio.h>
#include <string.h>
#include "nordic_common.h"
#include "nrf.h"
#include "nrf_gpio.h"
#include "nrf_error.h"
#include "nrf_delay.h"
#define REVERSE    1                                //是否逆向显示

void OLED_Display_On(void)
{
    OLED_Init();                    //OLED初始化
	
    OLED_WR_Byte(0X8D,OLED_CMD);  //SET DCDC命令
    OLED_WR_Byte(0X14,OLED_CMD);  //DCDC ON
    OLED_WR_Byte(0XAF,OLED_CMD);  //DISPLAY ON
}

void OLED_Display_Off(void)
{
    OLED_WR_Byte(0X8D,OLED_CMD);  //SET DCDC命令
    OLED_WR_Byte(0X10,OLED_CMD);  //DCDC OFF
    OLED_WR_Byte(0XAE,OLED_CMD);  //DISPLAY OFF
	
	  nrf_gpio_cfg_default(OLED_D0);
    nrf_gpio_cfg_default(OLED_D1);
    nrf_gpio_cfg_default(OLED_RES);
    nrf_gpio_cfg_default(OLED_DC);
    nrf_gpio_cfg_default(OLED_CS);
}

void OLED_Clear(void)  
{  
#if 0	  //直接清屏 
    uint8_t i,n;	
  
    for(i = 0; i < (Max_Row/8); i++)  
    {  
        OLED_WR_Byte (0xb2 + i, OLED_CMD);    //设置页地址（0~7）
        OLED_WR_Byte (0x00, OLED_CMD);      //设置显示位置—列低地址
        OLED_WR_Byte (0x12, OLED_CMD);      //设置显示位置—列高地址   
		
        for(n = 0; n < Max_Column; n++)
            OLED_WR_Byte(0, OLED_DATA); 

	   } //更新显示
#else   //清缓存
    memset(OLED_GRAM,0,sizeof(OLED_GRAM));
#endif

}

static void OLED_Set_Pos(uint8_t x,uint8_t y) 
{ 
    OLED_WR_Byte(0xb2 + y,OLED_CMD);
    OLED_WR_Byte((((x + 0x20) & 0xf0) >> 4) | 0x10, OLED_CMD);
    OLED_WR_Byte(( x & 0x0f ) | 0x01, OLED_CMD);  
}

void OLED_ShowChar(uint8_t x, uint8_t y, uint8_t chr, uint8_t size, uint8_t mode)
{      	
    uint8_t temp,t,t1;
	   uint8_t y0 = y;
	
	   chr = chr-' ';//得到偏移后的值			
	
    for(t = 0; t < size; t++)
    {   
		      if(size == 12)
            temp = asc2_1206[chr][t];  //调用1206字体
		      else if(size == 24)
            temp = asc2_2416[chr][t];  //调用2412字体 
        else if(size == 32)
			         temp = asc2_3224[chr][t];  //调用3224字体 
        else
			         temp = asc2_1608[chr][t];  //调用1608字体 
        
        for(t1 = 0; t1 < 8; t1++)
		      {
            if( temp & 0x80 )
                OLED_ShowDot(x,y,mode);
            else 
                OLED_ShowDot(x,y,!mode);
			
            temp <<= 1;
            y++;
            
			         if((y-y0) == size)
            {
                y = y0;
                x++;
                break;
            }
        }  	 
    }          
//    OLED_Refresh_Gram();//更新显示	
}

void OLED_ShowString(uint8_t x, uint8_t y, const char *p, uint8_t size, uint8_t mode)
{         
    while( *p!='\0' )
    {       
        if(x > MAX_CHAR_POSX)
        {
             x = 0;
             y += 16;
         }
        if(y > MAX_CHAR_POSY)
        {
             y = x = 0;
             OLED_Clear();
         }
        OLED_ShowChar(x,y,*p,size,mode);
		      if(size == 12)
		          x += 6;
		      else if(size == 32)
		          x += 10;
		      else
		          x += 8;	
       
        p++;
    }  
}

void OLED_ShowCHinese(uint8_t x, uint8_t y, uint8_t no, uint8_t size, uint8_t mode)
{    
    uint8_t temp,t,t1;
	   uint8_t y0 = y;  			    
	
    switch( size )
    {
        case 16:
       {
           for (t = 0; t < (2*size); t++)
          {
               temp = Hzk16_16[no][t];
               
               for(t1 = 0; t1 < 8; t1++)
               {
                   if(temp&0x80)
                       OLED_ShowDot(x,y,mode);
			                else 
                       OLED_ShowDot(x,y,!mode);
                   
                   temp <<= 1;
               
				               y++;
				               if ((y-y0) == size)
				               {
					                  y = y0;
					                  x++;
					                  break;
				               }
               }  
           }
       }
       break;
       
       case 12:
       {
          
          for (t = 0; t < 2*size; t++)
          {
               temp = Hzk12_12[no][t];
               
               for(t1 = 0; t1 < 8; t1++)
               {
                   if(temp&0x80)
                       OLED_ShowDot(x,y,mode);
			                else 
                       OLED_ShowDot(x,y,!mode);
                   
                   temp<<=1;
               
				               y++;
				               if ((y-y0) == size)
				               {
					                  y = y0;
					                  x++;
					                  break;
				               }
               }
          }
        
       }
       break;

       default:
       break;
    }
   
//    OLED_Refresh_Gram();//更新显示          				
}

void OLED_Init(void)
{ 	
    nrf_gpio_cfg_output(OLED_D0);
    nrf_gpio_cfg_output(OLED_D1);
    nrf_gpio_cfg_output(OLED_RES);
    nrf_gpio_cfg_output(OLED_DC);
    nrf_gpio_cfg_output(OLED_CS);
    
    RES_Set();
	  nrf_delay_ms(100);
	  RES_Reset();
	  nrf_delay_ms(100);
	  RES_Set(); 
	
    OLED_WR_Byte(0xAE,OLED_CMD);//--turn off oled panel
	  OLED_WR_Byte(0x00,OLED_CMD);//---set low column address
	  OLED_WR_Byte(0x12,OLED_CMD);//---set high column address
	  OLED_WR_Byte(0x40,OLED_CMD);//--set start line address  Set Mapping RAM Display Start Line (0x00~0x3F)
	  OLED_WR_Byte(0x81,OLED_CMD);//--set contrast control register
	  OLED_WR_Byte(0xCF,OLED_CMD);// Set SEG Output Current Brightness
	  OLED_WR_Byte(0xA1,OLED_CMD);//--Set SEG/Column Mapping     0xa0左右相反       0xa1正常
	  OLED_WR_Byte(0xC8,OLED_CMD);//Set COM/Row Scan Direction   0xc0上下相反       0xc8正常
	  OLED_WR_Byte(0xA6,OLED_CMD);//--set normal display
		OLED_WR_Byte(0xA8,OLED_CMD);//--set multiplex ratio(1 to 64)
	  OLED_WR_Byte(0x3f,OLED_CMD);//--1/64 duty
	  OLED_WR_Byte(0xD3,OLED_CMD);//-set display offset	Shift Mapping RAM Counter (0x00~0x3F)
	  OLED_WR_Byte(0x00,OLED_CMD);//-not offset
	  OLED_WR_Byte(0xd5,OLED_CMD);//--set display clock divide ratio/oscillator frequency
	  OLED_WR_Byte(0x80,OLED_CMD);//--set divide ratio, Set Clock as 100 Frames/Sec
	  OLED_WR_Byte(0xD9,OLED_CMD);//--set pre-charge period
	  OLED_WR_Byte(0xF1,OLED_CMD);//Set Pre-Charge as 15 Clocks & Discharge as 1 Clock
	  OLED_WR_Byte(0xDA,OLED_CMD);//--set com pins hardware configuration
	  OLED_WR_Byte(0x12,OLED_CMD);
	  OLED_WR_Byte(0xDB,OLED_CMD);//--set vcomh
	  OLED_WR_Byte(0x40,OLED_CMD);//Set VCOM Deselect Level
	  OLED_WR_Byte(0x20,OLED_CMD);//-Set Page Addressing Mode (0x00/0x01/0x02)
	  OLED_WR_Byte(0x02,OLED_CMD);//
	  OLED_WR_Byte(0x8D,OLED_CMD);//--set Charge Pump enable/disable
	  OLED_WR_Byte(0x14,OLED_CMD);//--set(0x10) disable
	  OLED_WR_Byte(0xA4,OLED_CMD);// Disable Entire Display On (0xa4/0xa5)
	  OLED_WR_Byte(0xA6,OLED_CMD);// Disable Inverse Display On (0xa6/a7) 
	  OLED_WR_Byte(0xAF,OLED_CMD);//--turn on oled panel
	
	  OLED_WR_Byte(0xAF,OLED_CMD); /*display ON*/ 
	  OLED_Clear();
	  OLED_Set_Pos(0,0); 	
}
